--- a/EightQueensApplication/src/eightqueensapplication/eightqueensapplication/EightQueens.form
+++ b/EightQueensApplication/src/eightqueensapplication/eightqueensapplication/EightQueens.form
@@ -75,7 +75,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="inputTextActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="inputText.setText(&quot;&quot;);"/>
+            <AuxValue name="JavaCodeGenerator_AddingCodePost" type="java.lang.String" value="inputText.setText(&quot;Input size of chessboard&quot;);&#xa;inputText.setForeground(Color.GRAY);"/>
           </AuxValues>
         </Component>
         <Component class="javax.swing.JButton" name="confirmButton">
